fixes, spacing adjustments and product images created

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -43,6 +43,29 @@ footer {
   }
 }
 
+.cart_btn {
+  display: inline-block;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: #ff6d00;
+  border: 1px solid rgb(0 0 0 / 0%);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+  &:hover {
+    background-color: darken($color: #ff6d00, $amount: 5%);
+  }
+}
+
 .nav_icon {
   display: inline-block;
   width: 25px;
